--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "remix vite:build",
-    "dev": "remix vite:dev --host",
+    "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore .",
     "start": "remix-serve ./build/index.js",
     "typecheck": "tsc"
